# riptide_optimization

./: .clang-format  .gitignore  CMakeLists.txt  README.md  beam_scan_plot  main.cpp  run.sh  run1.mac  run2.mac
.claude/: settings.json
.github/workflows/: regression.yml
analysis/: CMakeLists.txt  beam_scan_plot.cpp  geant4_heatmap.cpp  lens_ranking.hpp  m_c_creator.cpp  main_efficiency.cpp  plot2D.cpp  plot3D.cpp  plot_style_common.hpp  psf_common.hpp  psf_extractor.cpp
analysis/dof_analysis/: CMakeLists.txt  dof_map.cpp  dof_plot.cpp  dof_stats_common.hpp  magnification_map.cpp  psf_dof_extractor.cpp
analysis/exp1/: CMakeLists.txt  exp1_main.cpp  exp1_root_viewer.cpp
analysis/exp1/include/: fit_reader.hpp  frame_stats.hpp  image_analysis.hpp
analysis/exp1/src/: fit_reader.cpp  frame_stats.cpp  image_analysis.cpp
analysis/exp2/: CMakeLists.txt  exp2_main.cpp
analysis/exp2/include/: exp2_analysis.hpp  trace_extractor.hpp
analysis/exp2/src/: exp2_analysis.cpp  trace_extractor.cpp
analysis/exp3/: CMakeLists.txt  exp3_main.cpp  test_exp3_calib.cpp  test_exp3_homography.cpp
analysis/exp3/include/: exp3_analysis.hpp  exp3_config.hpp  exp3b_analysis.hpp  homography.hpp
analysis/exp3/src/: exp3_analysis.cpp  exp3_config.cpp  exp3_plots.cpp  exp3b_analysis.cpp  homography.cpp
analysis/exp_common/: CMakeLists.txt
analysis/exp_common/include/: fits_io.hpp  stacking.hpp
analysis/exp_common/src/: fits_io.cpp  stacking.cpp
analysis/include/: efficiency.hpp
analysis/pareto_analysis/: CMakeLists.txt  pareto_core.hpp  pareto_selector.cpp  test_pareto_selector.cpp
analysis/psf_analysis/: CMakeLists.txt  chi2_map.cpp  psf_gaussianity.cpp  psf_interpolator.cpp  psf_interpolator.hpp  q_map.cpp  test_chi2_diagnostics.cpp  test_fit_trace.cpp  trace_viewer.cpp
analysis/resolution_analysis/: CMakeLists.txt  resolution_map.cpp
analysis/src/: efficiency.cpp  viewer.cpp
config/: analysis_params.json  config.json  config_debug.json  config_detailed.json  config_fast.json  config_focus_test.json  config_intermediate.json  config_profile.json  config_psf_gaussianity.json  config_screening.json  config_sweep_nominal_m1.0_fast.json  config_test.json  config_validate_c_10k.json  config_validate_c_5k.json  config_validate_e.json  pareto_runs.json
config/exp3/: exp3_config.json
geometry/: define.xml  dof_geometry.gdml  main.gdml  materials.xml  solids.xml  structure.xml
include/: action_initialization.hpp  detector_construction.hpp  efficiency_collector.hpp  event_action.hpp  optimizer.hpp  photocathode_hit.hpp  physics_list.hpp  primary_generator_action.hpp  run_action.hpp  sensitive_detector.hpp
include/common/: focus_map.hpp  importance_sampling.hpp  physics_list.hpp  primary_generator_action.hpp  spot_grid.hpp  stepping_action.hpp
include/dof_simulation/: dof_action_initialization.hpp  dof_event_action.hpp  dof_scan.hpp  dof_stepping_action.hpp
include/lens_simulation/: action_initialization.hpp  detector_construction.hpp  event_action.hpp  lens_scan.hpp  lens_stepping_action.hpp  run_action.hpp
include/optimization/: detector_construction.hpp  event_action.hpp  optimizer.hpp  run_action.hpp
include/psf_dof_scan/: psf_dof_action_initialization.hpp  psf_dof_detector_construction.hpp  psf_dof_event_action.hpp  psf_dof_scan.hpp  psf_dof_stepping_action.hpp
lens_cutter/include/: lens_cutter.hpp
lens_cutter/lens_data/: custom_lenses.tsv  thorlabs_biconvex.tsv  thorlabs_planoconvex.tsv
lens_cutter/src/: lens_cutter.cpp
macro/: run1.mac  run3.mac
macros/: lens_profile.mac  lens_simulation.mac  optimization.mac  run.mac  run1.mac  run2.mac  run3.mac  vis.mac
programs/: dof_simulation_main.cpp  lens_cutter_main.cpp  lens_simulation_main.cpp  optimization_main.cpp  psf_dof_scan_main.cpp
scripts/: autonomous_optimizer.py  dashboard.py  lens_runner.py  monitor.sh  pareto_runner.py  run.sh  validate_tecnica_c.py  validate_tecnica_e.py  verify_chos.sh
src/: action_initialization.cpp  detector_construction.cpp  efficiency_collector.cpp  event_action.cpp  optimizer.cpp  photocathode_hit.cpp  physics_list.cpp  primary_generator_action.cpp  run_action.cpp  sensitive_detector.cpp
src/common/: importance_sampling.cpp  physics_list.cpp  primary_generator_action.cpp  stepping_action.cpp
src/dof_simulation/: dof_action_initialization.cpp  dof_event_action.cpp  dof_scan.cpp  dof_stepping_action.cpp
src/lens_simulation/: action_initialization.cpp  detector_construction.cpp  event_action.cpp  lens_scan.cpp  lens_stepping_action.cpp  run_action.cpp  sensitive_detector.cpp
src/optimization/: action_initialization.cpp  detector_construction.cpp  event_action.cpp  optimizer.cpp  run_action.cpp  sensitive_detector.cpp
src/psf_dof_scan/: psf_dof_action_initialization.cpp  psf_dof_event_action.cpp  psf_dof_scan.cpp  psf_dof_stepping_action.cpp
tests/: conftest.py  pytest.ini  run_tests.sh  test_01_rot1_axis.py  test_02_ee80_diameter.py  test_03_pareto_delta_m.py  test_04_weighted_sum.py  test_05_margins.py  test_06_nhits_type.py  test_07_focus_tsv.py  test_08_detector_pos.py  test_09_physvol_graceful.py  test_10_xvirtual_shift.py
